--- a/main.html
+++ b/main.html
@@ -11,6 +11,11 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div class="main">
+		<div class ="heading" id="heading">
+			This is a Heading
+		</div>
+	</div>
 </body>
 
 </html>
